# saaq_qa_assistant

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
backend/: Dockerfile  __init__.py  main.py
backend/api/v1/: chat.py  feedback.py
backend/app/core/: utils.py
backend/app/db/: vector_store.py  vectore_store.py
backend/core/: config.py  logging.py  utils.py
backend/db/: __init__.py  vector_store.py
backend/evaluation/: __init__.py  dataset.py  experiment.py  metrics.py  results.py
backend/ingest/: __init__.py  embedder.py  indexer.py  text_processor.py
backend/observability/: otel.py  settings.py
backend/schemas/: chat.py
backend/services/: __init__.py  document_retriever.py  llm_service.py  rag_pipeline.py  rag_prompt_builder.py
data/embeddings/html_documents/: 1_drivers_license[sentence-transformers_all-MiniLM-L6-v2].jsonl  blob_saaq_documents_publications_death_benefits_table.pdf[sentence-transformers_all-MiniLM-L6-v2].jsonl  (+92 more)
data/evaluation/: test_cases.jsonl
data/raw/html_sources/: 1_drivers_license.txt  (+1 more)
frontend/: Dockerfile  README.md  app.py
frontend/components/: __init__.py  answer_display.py  search_form.py  sources_display.py
frontend/config/: __init__.py  settings.py
frontend/services/: __init__.py  api_client.py
frontend/utils/: formatting.py  state.py
infra/: grafana_dashboard.json  nginx.conf  otel-collector.yml  prometheus.yml
scripts/: delete_collection.py  embedder.py  index_embeddings.py  pdf_collector.py  text_processor.py  web_collector.py
(+194 files in other folders)
